# SafeSpend

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CoreBudget/: CMakeLists.txt
CoreBudget/include/: DatabaseException.hpp  DatabaseManager.hpp  EncryptionService.hpp  Expense.hpp  ITransaction.hpp  Income.hpp  Transfer.hpp  Wallet.hpp
CoreBudget/src/: DatabaseManager.cpp  EncryptionService.cpp  Expense.cpp  Income.cpp  Transfer.cpp  Wallet.cpp
SafeSpendApp/: CMakeLists.txt
SafeSpendApp/resources/: app_icon.icns
SafeSpendApp/src/: AddTransactionDialog.cpp  AddTransactionDialog.hpp  LoginDialog.cpp  LoginDialog.hpp  MainWindow.cpp  MainWindow.hpp  ThemeManager.cpp  ThemeManager.hpp  WelcomeWindow.cpp  WelcomeWindow.hpp  main.cpp
